name:                clir-parser-haskell
version:             0.1.0.0
synopsis:            A parser for CAVI-ART CL-IR
description:         Please see README.md
homepage:            https://github.com/cavi-art/clir-parser-haskell#readme
license:             Apache2
license-file:        LICENSE
author:              Santiago Saavedra
maintainer:          s.saavedra@fdi.ucm.es
copyright:           2016 Complutense University of Madrid
category:            CAVI-ART
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable clir-parser-haskell-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , clir-parser-haskell
  default-language:    Haskell2010

test-suite clir-parser-haskell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , clir-parser-haskell
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/cavi-art/clir-parser-haskell
